
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 unsigned long KERNEL_BASE ;
 int fclose (int *) ;
 scalar_t__ fgets (char*,int,int *) ;
 int * fopen (char*,char*) ;
 unsigned int get_cookie (unsigned int) ;
 int printf (char*) ;
 int sscanf (char*,char*,unsigned int*,unsigned int*,unsigned int*,unsigned int*,unsigned int*,unsigned int*,unsigned int*,unsigned int*,unsigned int*,unsigned long*,unsigned int*,unsigned int*,unsigned int*,unsigned long*,unsigned int*,void**,unsigned long*,unsigned long*,unsigned int*,unsigned int*,unsigned int*) ;

unsigned long get_sock_addr(unsigned int port)
{
 FILE *f;
 char buf[1024], path[512];
 unsigned int testport, cookie, a;
 unsigned long addr, b;

 f = fopen("/proc/net/tcp", "r");

 if (f < 0) {
  printf("[*] Failed to open /proc/net/tcp\n");
  return 0;
 }

 while (fgets(buf, 1024, f)) {
  sscanf(buf, "%4d: %08X:%04X %08X:%04X %02X %08X:%08X "
       "%02X:%08lX %08X %5d %8d %lu %d %p %lu %lu %u %u "
       "%d\n",
       &a, &a, &testport, &a, &a, &a, &a, &a, &a, &b,
       &a, &a, &a, &b, &a, (void **)&addr, &b, &b, &a, &a,
       &a);
  if (testport == port) {

   if (!addr) {
    cookie = get_cookie(port);
    addr = (unsigned long)cookie + KERNEL_BASE;
   }
   fclose(f);
   return addr;
  }
 }
 fclose(f);
 return 0;
}
